# Notify-IP

./: .env  .gitignore  LICENSE  config.py  main.py  network.py  pyproject.toml  readme.md  requirements-test.txt  requirements.txt  setup.sh  system_info.py  toggle.sh
.github/workflows/: test.yml
bot/: __init__.py  client.py  commands.py  constants.py  decorators.py
tests/: test_commands.py  test_network.py  test_system_info.py
